Deployment/dev/k8sClusterDepAWSKOPS/modules/promeAndGrafana/ingress_prome.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prometheus
  name: promethous-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
    - host: 'prome.hn.com'
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
